# PooleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
content/font_atlases/: 8x8ASCIIBitmap_Font_Copyright_AttributionNotice.txt
include/: Poole.h  poole.h
include/Poole/: Engine.h
include/poole/: core.h  engine.h  entry_point.h
include/poole/core/: core_logging.h  core_types.h
include/poole/engine/: engine_time.h
include/poole/input/: input.h  input_types.h
include/poole/physics/collision_2D/: box_collider_2D.h  circle_collider_2D.h  collider_2D.h  collision_manager_2D.h
include/poole/rendering/: batched_renderer2D.h  rednerer2D.h  renderer.h  renderer2D.h  renderer2D_New.h  rendering_primitives.h  shader_loader.h  unbatched_renderer2D.h
include/poole/rendering/camera/: orthographic_camera.h
include/poole/rendering/image/: image.h  image_utils.h  sub_image.h  svg.h
include/poole/rendering/text/: font_renderer.h  render_font.h  render_text.h  render_text_factory.h  svg_font_renderer.h  text_renderer.h  text_renderer_factory.h
include/poole_temp/: engine.h.temp
src/: CMakeLists.txt  Engine.cpp  Poole.cpp  engine.cpp  foo_calls_bar.cpp  internal_bar.cpp  poole.cpp
src/Rendering/: ShaderLoader.cpp  ShaderLoader.h
src/core/: core_logging.cpp  core_types.cpp
src/debug/: debug_overlay.cpp  debug_overlay.h
src/engine/: command_args.cpp  command_args.h  engine_time.cpp
src/input/: input.cpp
src/physics/collision_2D/: box_collider_2D.cpp  circle_collider_2D.cpp  collider_2D.cpp  collision_manager_2D.cpp
src/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
src/rendering/: batched_renderer2D.cpp  renderer.cpp  renderer.h  renderer2D.cpp  renderer2D_New.cpp  rendering_primitives.cpp  rendering_primitives.h  shader_loader.cpp  shader_loader.h  unbatched_renderer2D.cpp
src/rendering/camera/: orthographic_camera.cpp  orthographic_camera.h
src/rendering/graphics_api/: buffer.cpp  buffer.h  renderer_api.cpp  renderer_api.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/rendering/image/: image.cpp  image.h  image_utils.cpp  stb.cpp  sub_image.cpp  svg.cpp
src/rendering/shader_literals/: shaderLiterals.h  shader_literals.h
src/rendering/shaders/: Circle2DBatchedTransform.shader  Circle2DTransform.shader  Experimental1.shader  Experimental2.shader  Experimental3.shader  Line2DBatchedTransform.shader  Texture2DBatchedTransform.shader  Texture2DTransform.shader  UniformColor.shader  UniformColor2DTransform.shader  VertexColor.shader  VertexColor2DTransform.shader
src/rendering/text/: font_renderer.cpp  render_font.cpp  render_text.cpp  render_text_factory.cpp  svg_font_renderer.cpp  text_renderer.cpp  text_renderer_factory.cpp
src/window/: window.cpp  window.h
